[gd_scene load_steps=4 format=4 uid="uid://borrl1q1erb2s"]

[ext_resource type="TileSet" uid="uid://bbcj0verus68b" path="res://assets/tileset.tres" id="1_7at1u"]
[ext_resource type="Script" path="res://scripts/whistle.gd" id="1_l5ucs"]
[ext_resource type="PackedScene" uid="uid://be46f0movhp5e" path="res://prefabs/dual_map_layer.tscn" id="2_ssxi0"]

[node name="Whistle" type="Node2D"]
script = ExtResource("1_l5ucs")

[node name="Cursor" parent="." instance=ExtResource("2_ssxi0")]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAYAAEAAQA=")

[node name="BackgroundLayer" parent="Cursor" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAA=")

[node name="PreviewView" type="Node2D" parent="."]
visible = false

[node name="PreviewLayer1" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer2" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD/////AAASAAMAAQD//wAAAAASAAMAAQD//wEAAAASAAMAAQAAAAEAAAASAAMAAQABAAEAAAASAAMAAQABAAAAAAASAAMAAQABAP//AAASAAMAAQAAAP//AAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer3" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD+/wIAAAASAAMAAQD//wIAAAASAAMAAQAAAAIAAAASAAMAAQABAAIAAAASAAMAAQACAAIAAAASAAMAAQACAAEAAAASAAMAAQACAAAAAAASAAMAAQACAP//AAASAAMAAQACAP7/AAASAAMAAQABAP7/AAASAAMAAQAAAP7/AAASAAMAAQD///7/AAASAAMAAQD+//7/AAASAAMAAQD+////AAASAAMAAQD+/wAAAAASAAMAAQD+/wEAAAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer4" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD9/wMAAAASAAMAAQD+/wMAAAASAAMAAQD//wMAAAASAAMAAQAAAAMAAAASAAMAAQABAAMAAAASAAMAAQACAAMAAAASAAMAAQADAAMAAAASAAMAAQADAAIAAAASAAMAAQADAAEAAAASAAMAAQADAAAAAAASAAMAAQADAP//AAASAAMAAQADAP7/AAASAAMAAQADAP3/AAASAAMAAQACAP3/AAASAAMAAQABAP3/AAASAAMAAQAAAP3/AAASAAMAAQD///3/AAASAAMAAQD+//3/AAASAAMAAQD9//3/AAASAAMAAQD9//7/AAASAAMAAQD9////AAASAAMAAQD9/wAAAAASAAMAAQD9/wEAAAASAAMAAQD9/wIAAAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer5" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD8/wQAAAASAAMAAQD9/wQAAAASAAMAAQD+/wQAAAASAAMAAQD//wQAAAASAAMAAQAAAAQAAAASAAMAAQABAAQAAAASAAMAAQACAAQAAAASAAMAAQADAAQAAAASAAMAAQAEAAQAAAASAAMAAQAEAAMAAAASAAMAAQAEAAIAAAASAAMAAQAEAAEAAAASAAMAAQAEAAAAAAASAAMAAQAEAP//AAASAAMAAQAEAP7/AAASAAMAAQAEAP3/AAASAAMAAQAEAPz/AAASAAMAAQADAPz/AAASAAMAAQACAPz/AAASAAMAAQABAPz/AAASAAMAAQAAAPz/AAASAAMAAQD///z/AAASAAMAAQD+//z/AAASAAMAAQD9//z/AAASAAMAAQD8//z/AAASAAMAAQD8//3/AAASAAMAAQD8//7/AAASAAMAAQD8////AAASAAMAAQD8/wAAAAASAAMAAQD8/wEAAAASAAMAAQD8/wIAAAASAAMAAQD8/wMAAAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer6" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD7/wUAAAASAAMAAQD8/wUAAAASAAMAAQD9/wUAAAASAAMAAQD+/wUAAAASAAMAAQD//wUAAAASAAMAAQAAAAUAAAASAAMAAQABAAUAAAASAAMAAQACAAUAAAASAAMAAQADAAUAAAASAAMAAQAEAAUAAAASAAMAAQAFAAUAAAASAAMAAQAFAAQAAAASAAMAAQAFAAMAAAASAAMAAQAFAAIAAAASAAMAAQAFAAEAAAASAAMAAQAFAAAAAAASAAMAAQAFAP//AAASAAMAAQAFAP7/AAASAAMAAQAFAP3/AAASAAMAAQAFAPz/AAASAAMAAQAFAPv/AAASAAMAAQAEAPv/AAASAAMAAQADAPv/AAASAAMAAQACAPv/AAASAAMAAQABAPv/AAASAAMAAQAAAPv/AAASAAMAAQD///v/AAASAAMAAQD+//v/AAASAAMAAQD9//v/AAASAAMAAQD8//v/AAASAAMAAQD7//v/AAASAAMAAQD7//z/AAASAAMAAQD7//3/AAASAAMAAQD7//7/AAASAAMAAQD7////AAASAAMAAQD7/wAAAAASAAMAAQD7/wEAAAASAAMAAQD7/wIAAAASAAMAAQD7/wMAAAASAAMAAQD7/wQAAAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer7" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD6//r/AAASAAMAAQD6//v/AAASAAMAAQD6//z/AAASAAMAAQD6//3/AAASAAMAAQD6//7/AAASAAMAAQD6////AAASAAMAAQD6/wAAAAASAAMAAQD6/wEAAAASAAMAAQD6/wIAAAASAAMAAQD6/wMAAAASAAMAAQD6/wQAAAASAAMAAQD6/wUAAAASAAMAAQD6/wYAAAASAAMAAQD7/wYAAAASAAMAAQD8/wYAAAASAAMAAQD9/wYAAAASAAMAAQD+/wYAAAASAAMAAQD//wYAAAASAAMAAQAAAAYAAAASAAMAAQABAAYAAAASAAMAAQACAAYAAAASAAMAAQADAAYAAAASAAMAAQAEAAYAAAASAAMAAQAFAAYAAAASAAMAAQAGAAYAAAASAAMAAQAGAAUAAAASAAMAAQAGAAQAAAASAAMAAQAGAAMAAAASAAMAAQAGAAIAAAASAAMAAQAGAAEAAAASAAMAAQAGAAAAAAASAAMAAQAGAP//AAASAAMAAQAGAP7/AAASAAMAAQAGAP3/AAASAAMAAQAGAPz/AAASAAMAAQAGAPv/AAASAAMAAQAGAPr/AAASAAMAAQAFAPr/AAASAAMAAQAEAPr/AAASAAMAAQADAPr/AAASAAMAAQACAPr/AAASAAMAAQABAPr/AAASAAMAAQAAAPr/AAASAAMAAQD///r/AAASAAMAAQD+//r/AAASAAMAAQD9//r/AAASAAMAAQD8//r/AAASAAMAAQD7//r/AAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer8" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD5//n/AAASAAMAAQD5//r/AAASAAMAAQD5//v/AAASAAMAAQD5//z/AAASAAMAAQD5//3/AAASAAMAAQD5//7/AAASAAMAAQD5////AAASAAMAAQD5/wAAAAASAAMAAQD5/wEAAAASAAMAAQD5/wIAAAASAAMAAQD5/wMAAAASAAMAAQD5/wQAAAASAAMAAQD5/wUAAAASAAMAAQD5/wYAAAASAAMAAQD5/wcAAAASAAMAAQD6/wcAAAASAAMAAQD7/wcAAAASAAMAAQD8/wcAAAASAAMAAQD9/wcAAAASAAMAAQD+/wcAAAASAAMAAQD//wcAAAASAAMAAQAAAAcAAAASAAMAAQABAAcAAAASAAMAAQACAAcAAAASAAMAAQADAAcAAAASAAMAAQAEAAcAAAASAAMAAQAFAAcAAAASAAMAAQAGAAcAAAASAAMAAQAHAAcAAAASAAMAAQAHAAYAAAASAAMAAQAHAAUAAAASAAMAAQAHAAQAAAASAAMAAQAHAAMAAAASAAMAAQAHAAIAAAASAAMAAQAHAAEAAAASAAMAAQAHAAAAAAASAAMAAQAHAP//AAASAAMAAQAHAP7/AAASAAMAAQAHAP3/AAASAAMAAQAHAPz/AAASAAMAAQAHAPv/AAASAAMAAQAHAPr/AAASAAMAAQAHAPn/AAASAAMAAQAGAPn/AAASAAMAAQAFAPn/AAASAAMAAQAEAPn/AAASAAMAAQADAPn/AAASAAMAAQACAPn/AAASAAMAAQABAPn/AAASAAMAAQAAAPn/AAASAAMAAQD///n/AAASAAMAAQD+//n/AAASAAMAAQD9//n/AAASAAMAAQD8//n/AAASAAMAAQD7//n/AAASAAMAAQD6//n/AAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer9" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD4//j/AAASAAMAAQD4//n/AAASAAMAAQD4//r/AAASAAMAAQD4//v/AAASAAMAAQD4//z/AAASAAMAAQD4//3/AAASAAMAAQD4//7/AAASAAMAAQD4////AAASAAMAAQD4/wAAAAASAAMAAQD4/wEAAAASAAMAAQD4/wIAAAASAAMAAQD4/wMAAAASAAMAAQD4/wQAAAASAAMAAQD4/wUAAAASAAMAAQD4/wYAAAASAAMAAQD4/wcAAAASAAMAAQD4/wgAAAASAAMAAQD5/wgAAAASAAMAAQD6/wgAAAASAAMAAQD7/wgAAAASAAMAAQD8/wgAAAASAAMAAQD9/wgAAAASAAMAAQD+/wgAAAASAAMAAQD//wgAAAASAAMAAQAAAAgAAAASAAMAAQABAAgAAAASAAMAAQACAAgAAAASAAMAAQADAAgAAAASAAMAAQAEAAgAAAASAAMAAQAFAAgAAAASAAMAAQAGAAgAAAASAAMAAQAHAAgAAAASAAMAAQAIAAgAAAASAAMAAQAIAAcAAAASAAMAAQAIAAYAAAASAAMAAQAIAAUAAAASAAMAAQAIAAQAAAASAAMAAQAIAAMAAAASAAMAAQAIAAIAAAASAAMAAQAIAAEAAAASAAMAAQAIAAAAAAASAAMAAQAIAP//AAASAAMAAQAIAP7/AAASAAMAAQAIAP3/AAASAAMAAQAIAPz/AAASAAMAAQAIAPv/AAASAAMAAQAIAPr/AAASAAMAAQAIAPn/AAASAAMAAQAIAPj/AAASAAMAAQAHAPj/AAASAAMAAQAGAPj/AAASAAMAAQAFAPj/AAASAAMAAQAEAPj/AAASAAMAAQADAPj/AAASAAMAAQACAPj/AAASAAMAAQABAPj/AAASAAMAAQAAAPj/AAASAAMAAQD///j/AAASAAMAAQD+//j/AAASAAMAAQD9//j/AAASAAMAAQD8//j/AAASAAMAAQD7//j/AAASAAMAAQD6//j/AAASAAMAAQD5//j/AAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="PreviewLayer10" type="TileMapLayer" parent="PreviewView"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAD3//f/AAASAAMAAQD3//j/AAASAAMAAQD3//n/AAASAAMAAQD3//r/AAASAAMAAQD3//v/AAASAAMAAQD3//z/AAASAAMAAQD3//3/AAASAAMAAQD3//7/AAASAAMAAQD3////AAASAAMAAQD3/wAAAAASAAMAAQD3/wEAAAASAAMAAQD3/wIAAAASAAMAAQD3/wMAAAASAAMAAQD3/wQAAAASAAMAAQD3/wUAAAASAAMAAQD3/wYAAAASAAMAAQD3/wcAAAASAAMAAQD3/wgAAAASAAMAAQD3/wkAAAASAAMAAQD4/wkAAAASAAMAAQD5/wkAAAASAAMAAQD6/wkAAAASAAMAAQD7/wkAAAASAAMAAQD8/wkAAAASAAMAAQD9/wkAAAASAAMAAQD+/wkAAAASAAMAAQD//wkAAAASAAMAAQAAAAkAAAASAAMAAQABAAkAAAASAAMAAQACAAkAAAASAAMAAQADAAkAAAASAAMAAQAEAAkAAAASAAMAAQAFAAkAAAASAAMAAQAGAAkAAAASAAMAAQAHAAkAAAASAAMAAQAIAAkAAAASAAMAAQAJAAkAAAASAAMAAQAJAAgAAAASAAMAAQAJAAcAAAASAAMAAQAJAAYAAAASAAMAAQAJAAUAAAASAAMAAQAJAAQAAAASAAMAAQAJAAMAAAASAAMAAQAJAAIAAAASAAMAAQAJAAEAAAASAAMAAQAJAAAAAAASAAMAAQAJAP//AAASAAMAAQAJAP7/AAASAAMAAQAJAP3/AAASAAMAAQAJAPz/AAASAAMAAQAJAPv/AAASAAMAAQAJAPr/AAASAAMAAQAJAPn/AAASAAMAAQAJAPj/AAASAAMAAQAJAPf/AAASAAMAAQAIAPf/AAASAAMAAQAHAPf/AAASAAMAAQAGAPf/AAASAAMAAQAFAPf/AAASAAMAAQAEAPf/AAASAAMAAQADAPf/AAASAAMAAQACAPf/AAASAAMAAQABAPf/AAASAAMAAQAAAPf/AAASAAMAAQD///f/AAASAAMAAQD+//f/AAASAAMAAQD9//f/AAASAAMAAQD8//f/AAASAAMAAQD7//f/AAASAAMAAQD6//f/AAASAAMAAQD5//f/AAASAAMAAQD4//f/AAASAAMAAQA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer1" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer2" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD/////AQAAAAAAAAAAAP//AQAAAAcAAAABAP//AQAAAAYAAAABAAAAAQAAAAUAAAABAAEAAQAAAAQAAAAAAAEAAQAAAAMAAAD//wEAAQAAAAIAAAD//wAAAQAAAAEAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer3" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD+//7/AQAAAAAAAAD///7/AQAAAAUAAAAAAP7/AQAAAAQAAAABAP7/AQAAAAMAAAACAP7/AQAAAAIAAAACAP//AQAAAAEAAAACAAAAAQAAAAAAAAACAAEAAQAAAAkAAAACAAIAAQAAAAgAAAABAAIAAQAAAAcAAAAAAAIAAQAAAAYAAAD//wIAAQAAAAUAAAD+/wIAAQAAAAQAAAD+/wEAAQAAAAMAAAD+/wAAAQAAAAIAAAD+////AQAAAAEAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer4" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD9/wMAAQAAAAYAAAD9/wIAAQAAAAUAAAD9/wEAAQAAAAQAAAD9/wAAAQAAAAMAAAD9////AQAAAAIAAAD9//7/AQAAAAEAAAD9//3/AQAAAAQAAAD+//3/AQAAAAMAAAD///3/AQAAAAIAAAAAAP3/AQAAAAEAAAABAP3/AQAAAAAAAAACAP3/AQAAAAkAAAADAP7/AQAAAAcAAAADAP//AQAAAAYAAAADAAAAAQAAAAUAAAADAAEAAQAAAAQAAAADAAIAAQAAAAMAAAADAAMAAQAAAAIAAAACAAMAAQAAAAEAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAkAAAD//wMAAQAAAAgAAAD+/wMAAQAAAAcAAAADAP3/AQAAAAgAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer5" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD8/wQAAQAAAAgAAAD8/wMAAQAAAAcAAAD8/wIAAQAAAAYAAAD8/wEAAQAAAAUAAAD8/wAAAQAAAAQAAAD8////AQAAAAMAAAD8//7/AQAAAAIAAAD8//3/AQAAAAEAAAD8//z/AQAAAAIAAAD9//z/AQAAAAEAAAD+//z/AQAAAAAAAAD///z/AQAAAAkAAAAAAPz/AQAAAAgAAAABAPz/AQAAAAcAAAACAPz/AQAAAAYAAAADAPz/AQAAAAUAAAAEAPz/AQAAAAQAAAAEAP3/AQAAAAMAAAAEAP7/AQAAAAIAAAAEAP//AQAAAAEAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAkAAAAEAAIAAQAAAAgAAAAEAAMAAQAAAAcAAAAEAAQAAQAAAAYAAAADAAQAAQAAAAUAAAACAAQAAQAAAAQAAAABAAQAAQAAAAMAAAAAAAQAAQAAAAIAAAD//wQAAQAAAAEAAAD+/wQAAQAAAAAAAAD9/wQAAQAAAAkAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer6" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD7/wUAAQAAAAAAAAD7/wQAAQAAAAkAAAD7/wMAAQAAAAgAAAD7/wIAAQAAAAcAAAD7/wEAAQAAAAYAAAD7/wAAAQAAAAUAAAD7////AQAAAAQAAAD7//7/AQAAAAMAAAD7//3/AQAAAAIAAAD7//z/AQAAAAEAAAD7//v/AQAAAAAAAAD8//v/AQAAAAkAAAD9//v/AQAAAAgAAAD+//v/AQAAAAcAAAD///v/AQAAAAYAAAAAAPv/AQAAAAUAAAABAPv/AQAAAAQAAAACAPv/AQAAAAMAAAADAPv/AQAAAAIAAAAEAPv/AQAAAAEAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAkAAAAFAP3/AQAAAAgAAAAFAP7/AQAAAAcAAAAFAP//AQAAAAYAAAAFAAAAAQAAAAUAAAAFAAEAAQAAAAQAAAAFAAIAAQAAAAMAAAAFAAMAAQAAAAIAAAAFAAQAAQAAAAEAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAkAAAADAAUAAQAAAAgAAAACAAUAAQAAAAcAAAABAAUAAQAAAAYAAAAAAAUAAQAAAAUAAAD//wUAAQAAAAQAAAD+/wUAAQAAAAMAAAD9/wUAAQAAAAIAAAD8/wUAAQAAAAEAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer7" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD6/wYAAQAAAAIAAAD6/wUAAQAAAAEAAAD6/wQAAQAAAAAAAAD6/wMAAQAAAAkAAAD6/wIAAQAAAAgAAAD6/wEAAQAAAAcAAAD6/wAAAQAAAAYAAAD6////AQAAAAUAAAD6//7/AQAAAAQAAAD6//3/AQAAAAMAAAD6//z/AQAAAAIAAAD6//v/AQAAAAEAAAD6//r/AQAAAAgAAAD7//r/AQAAAAcAAAD8//r/AQAAAAYAAAD9//r/AQAAAAUAAAD+//r/AQAAAAQAAAD///r/AQAAAAMAAAAAAPr/AQAAAAIAAAABAPr/AQAAAAEAAAACAPr/AQAAAAAAAAADAPr/AQAAAAkAAAAEAPr/AQAAAAgAAAAFAPr/AQAAAAcAAAAGAPr/AQAAAAYAAAAGAPv/AQAAAAUAAAAGAPz/AQAAAAQAAAAGAP3/AQAAAAMAAAAGAP7/AQAAAAIAAAAGAP//AQAAAAEAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAkAAAAGAAIAAQAAAAgAAAAGAAMAAQAAAAcAAAAGAAQAAQAAAAYAAAAGAAUAAQAAAAUAAAAGAAYAAQAAAAQAAAAFAAYAAQAAAAMAAAAEAAYAAQAAAAIAAAADAAYAAQAAAAEAAAACAAYAAQAAAAAAAAABAAYAAQAAAAkAAAAAAAYAAQAAAAgAAAD//wYAAQAAAAcAAAD+/wYAAQAAAAYAAAD9/wYAAQAAAAUAAAD8/wYAAQAAAAQAAAD7/wYAAQAAAAMAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer8" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD5//n/AQAAAAAAAAD5//r/AQAAAAEAAAD5//v/AQAAAAIAAAD5//z/AQAAAAMAAAD5//3/AQAAAAQAAAD5//7/AQAAAAUAAAD5////AQAAAAYAAAD5/wAAAQAAAAcAAAD5/wEAAQAAAAgAAAD5/wIAAQAAAAkAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAEAAAD5/wUAAQAAAAIAAAD5/wYAAQAAAAMAAAD5/wcAAQAAAAQAAAD6/wcAAQAAAAUAAAD7/wcAAQAAAAYAAAD8/wcAAQAAAAcAAAD9/wcAAQAAAAgAAAD+/wcAAQAAAAkAAAD//wcAAQAAAAAAAAAAAAcAAQAAAAEAAAABAAcAAQAAAAIAAAACAAcAAQAAAAMAAAADAAcAAQAAAAQAAAAEAAcAAQAAAAUAAAAFAAcAAQAAAAYAAAAGAAcAAQAAAAcAAAAHAAcAAQAAAAgAAAAHAAYAAQAAAAkAAAAHAAUAAQAAAAAAAAAHAAQAAQAAAAEAAAAHAAMAAQAAAAIAAAAHAAIAAQAAAAMAAAAHAAEAAQAAAAQAAAAHAAAAAQAAAAUAAAAHAP//AQAAAAYAAAAHAP7/AQAAAAcAAAAHAP3/AQAAAAgAAAAHAPz/AQAAAAkAAAAHAPv/AQAAAAAAAAAHAPr/AQAAAAEAAAAHAPn/AQAAAAIAAAAGAPn/AQAAAAMAAAAFAPn/AQAAAAQAAAAEAPn/AQAAAAUAAAADAPn/AQAAAAYAAAACAPn/AQAAAAcAAAABAPn/AQAAAAgAAAAAAPn/AQAAAAkAAAD///n/AQAAAAAAAAD+//n/AQAAAAEAAAD9//n/AQAAAAIAAAD8//n/AQAAAAMAAAD7//n/AQAAAAQAAAD6//n/AQAAAAUAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer9" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD4//j/AQAAAAAAAAD4//n/AQAAAAEAAAD4//r/AQAAAAIAAAD4//v/AQAAAAMAAAD4//z/AQAAAAQAAAD4//3/AQAAAAUAAAD4//7/AQAAAAYAAAD4////AQAAAAcAAAD4/wAAAQAAAAgAAAD4/wEAAQAAAAkAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAEAAAD4/wQAAQAAAAIAAAD4/wUAAQAAAAMAAAD4/wYAAQAAAAQAAAD4/wcAAQAAAAUAAAD4/wgAAQAAAAYAAAD5/wgAAQAAAAcAAAD6/wgAAQAAAAgAAAD7/wgAAQAAAAkAAAD8/wgAAQAAAAAAAAD9/wgAAQAAAAEAAAD+/wgAAQAAAAIAAAD//wgAAQAAAAMAAAAAAAgAAQAAAAQAAAABAAgAAQAAAAUAAAACAAgAAQAAAAYAAAADAAgAAQAAAAcAAAAEAAgAAQAAAAgAAAAFAAgAAQAAAAkAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAEAAAAIAAgAAQAAAAIAAAAIAAcAAQAAAAMAAAAIAAYAAQAAAAQAAAAIAAUAAQAAAAUAAAAIAAQAAQAAAAYAAAAIAAMAAQAAAAcAAAAIAAIAAQAAAAgAAAAIAAEAAQAAAAkAAAAIAAAAAQAAAAAAAAAIAP//AQAAAAEAAAAIAP7/AQAAAAIAAAAIAP3/AQAAAAMAAAAIAPz/AQAAAAQAAAAIAPv/AQAAAAUAAAAIAPr/AQAAAAYAAAAIAPn/AQAAAAcAAAAIAPj/AQAAAAgAAAAHAPj/AQAAAAkAAAAGAPj/AQAAAAAAAAAFAPj/AQAAAAEAAAAEAPj/AQAAAAIAAAADAPj/AQAAAAMAAAACAPj/AQAAAAQAAAABAPj/AQAAAAUAAAAAAPj/AQAAAAYAAAD///j/AQAAAAcAAAD+//j/AQAAAAgAAAD9//j/AQAAAAkAAAD8//j/AQAAAAAAAAD7//j/AQAAAAEAAAD6//j/AQAAAAIAAAD5//j/AQAAAAMAAAA=")
tile_set = ExtResource("1_7at1u")

[node name="AnimationLayer10" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD3//f/AQAAAAAAAAD3//j/AQAAAAEAAAD3//n/AQAAAAIAAAD3//r/AQAAAAMAAAD3//v/AQAAAAQAAAD3//z/AQAAAAUAAAD3//3/AQAAAAYAAAD3//7/AQAAAAcAAAD3////AQAAAAgAAAD3/wAAAQAAAAkAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAEAAAD3/wMAAQAAAAIAAAD3/wQAAQAAAAMAAAD3/wUAAQAAAAQAAAD3/wYAAQAAAAUAAAD3/wcAAQAAAAYAAAD3/wgAAQAAAAcAAAD3/wkAAQAAAAgAAAD4/wkAAQAAAAkAAAD5/wkAAQAAAAAAAAD6/wkAAQAAAAEAAAD7/wkAAQAAAAIAAAD8/wkAAQAAAAMAAAD9/wkAAQAAAAQAAAD+/wkAAQAAAAUAAAD//wkAAQAAAAYAAAAAAAkAAQAAAAcAAAABAAkAAQAAAAgAAAACAAkAAQAAAAkAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAEAAAAFAAkAAQAAAAIAAAAGAAkAAQAAAAMAAAAHAAkAAQAAAAQAAAAIAAkAAQAAAAUAAAAJAAkAAQAAAAYAAAAJAAgAAQAAAAcAAAAJAAcAAQAAAAgAAAAJAAYAAQAAAAkAAAAJAAUAAQAAAAAAAAAJAAQAAQAAAAEAAAAJAAMAAQAAAAIAAAAJAAIAAQAAAAMAAAAJAAEAAQAAAAQAAAAJAAAAAQAAAAUAAAAJAP//AQAAAAYAAAAJAP7/AQAAAAcAAAAJAP3/AQAAAAgAAAAJAPz/AQAAAAkAAAAJAPv/AQAAAAAAAAAJAPr/AQAAAAEAAAAJAPn/AQAAAAIAAAAJAPj/AQAAAAMAAAAJAPf/AQAAAAQAAAAIAPf/AQAAAAUAAAAHAPf/AQAAAAYAAAAGAPf/AQAAAAcAAAAFAPf/AQAAAAgAAAAEAPf/AQAAAAkAAAADAPf/AQAAAAAAAAACAPf/AQAAAAEAAAABAPf/AQAAAAIAAAAAAPf/AQAAAAMAAAD///f/AQAAAAQAAAD+//f/AQAAAAUAAAD9//f/AQAAAAYAAAD8//f/AQAAAAcAAAD7//f/AQAAAAgAAAD6//f/AQAAAAkAAAD5//f/AQAAAAAAAAD4//f/AQAAAAEAAAA=")
tile_set = ExtResource("1_7at1u")

[editable path="Cursor"]
